--- a/woo-vipps/recurring/changelog.txt
+++ b/woo-vipps/recurring/changelog.txt
@@ -1,5 +1,10 @@
 == Changelog ==
 
+= 2.1.4 =
+* Fixed: Actually fixed abandoned Checkout orders not being deleted this time.
+* Fixed: Payments towards a failed renewal order are now possible.
+* Fixed: When using Checkout it will no longer tell you that you already have a subscription when you haven't paid yet.
+
 = 2.1.3 =
 * Fixed: We were still using calls to `get_posts` a few places, which was incompatible with WooCommerce HPOS. This fixes gateway changes, in-app description updates, and in-app subscription cancellation for installations using HPOS.
 * Fixed: Some payments that were cancelled quickly could get stuck in a "MobilePay payments are automatically captured" loop for merchants using MobilePay.
