--- a/woo-vipps/recurring/changelog.txt
+++ b/woo-vipps/recurring/changelog.txt
@@ -1,5 +1,8 @@
 == Changelog ==
 
+= 2.2.6 =
+* Fix: Properly handle order ids when using the payment retry feature.
+
 = 2.2.5 =
 * Fix: Set language correctly in Checkout.
 
